spade-tests/src/snapshots/spade_tests__typeinference__wrong_index_size_on_memory_read_port_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
use std::mem::clocked_memory;
use std::mem::read_memory;

entity test(clk: clock, idx: uint<32>) -> int<8> {
    let mem: Memory<int<8>, 32> = inst clocked_memory(clk, []);
    inst read_memory(mem, idx)
}


error: Argument type mismatch. Expected uint<5> got uint<32>
  ┌─ testinput:6:27
  │
4 │ entity test(clk: clock, idx: uint<32>) -> int<8> {
  │                                   -- Type 32 inferred here
5 │     let mem: Memory<int<8>, 32> = inst clocked_memory(clk, []);
6 │     inst read_memory(mem, idx)
  │                           ^^^ expected uint<5>
  │
  = note: Expected: 5
                in: uint<5>
               Got: 32
                in: uint<32>


